--- a/Mapper/StandaloneXsltScriptDesigner.xaml
+++ b/Mapper/StandaloneXsltScriptDesigner.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ScriptModule.MainWindow"
+﻿<Window x:Class="ScriptModule.StandaloneXsltScriptDesigner"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:l="clr-namespace:ScriptModule"
