--- a/Mapper/ScriptModule.xaml
+++ b/Mapper/ScriptModule.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:ScriptModule.Controls"
+        xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         Title="ScriptModule"
         Loaded="ScriptModule_OnLoaded">
     <Window.Resources>
@@ -15,54 +16,89 @@
     <Window.CommandBindings>
         <CommandBinding Command="New" Executed="NewScript_Click" />
         <CommandBinding Command="Save" Executed="Save_Click" />
-        <CommandBinding Command="Save" Executed="Run_Click" CanExecute="CanRun_Handler" />
+        <CommandBinding Command="Play" Executed="Run_Click" CanExecute="CanRun_Handler" />
+        <CommandBinding Command="Close" Executed="Close_Execute" />
     </Window.CommandBindings>
-    <DockPanel>
-        <ToolBarPanel DockPanel.Dock="Top">
-            <ToolBar>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="24"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="24"/>
+        </Grid.RowDefinitions>
+        <Menu>
+            <MenuItem Header="Script Module">
                 <MenuItem Header="New" Command="New" />
                 <MenuItem Header="Save" Command="Save" />
                 <MenuItem Header="Execute" Command="Play" />
-            </ToolBar>
-        </ToolBarPanel>
-        <ListView DockPanel.Dock="Left" MinWidth="120" IsSynchronizedWithCurrentItem="True"
-                  ItemsSource="{Binding Scripts}" SelectedItem="{Binding Current}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <TextBox Text="{Binding ScriptName}" Visibility="{Binding RenameMode, Converter={StaticResource BoolToVisibility}}" />
-                        <TextBlock Text="{Binding ScriptName}" Visibility="{Binding RenameMode, Converter={StaticResource InvertBoolToVisibility}}"/>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <TreeView DockPanel.Dock="Right" Background="WhiteSmoke">
-            <TreeViewItem Header="Input" IsExpanded="True">
-                <TreeViewItem Header="Local File System" />
-                <TreeViewItem Header="Ftp Location" />
-                <TreeViewItem Header="Database" />
-            </TreeViewItem>
-            <TreeViewItem Header="Converters" IsExpanded="True">
-                <TreeViewItem Header="Xml To Csv" />
-                <TreeViewItem Header="Csv To Xml" />
-            </TreeViewItem>
-            <TreeViewItem Header="Scripts" IsExpanded="True">
-                <TreeViewItem Header="C# Script" />
-                <TreeViewItem Header="XSLT Script" />
-            </TreeViewItem>
-            <TreeViewItem Header="Output" IsExpanded="True">
-                <TreeViewItem Header="Local File System" />
-                <TreeViewItem Header="Ftp Location" />
-                <TreeViewItem Header="Database" />
-            </TreeViewItem>
-        </TreeView>
-        <TabControl x:Name="DesignerTagControl" TabStripPlacement="Bottom" IsSynchronizedWithCurrentItem="True"
+                <Separator />
+                <MenuItem Header="Exit" Command="Close"/>
+            </MenuItem>
+        </Menu>
+
+        <ad:DockingManager x:Name="dockManager" Grid.Row="1">
+            <ad:ResizingPanel Orientation="Vertical">
+                <ad:ResizingPanel Orientation="Horizontal">
+                    <ad:DockablePane ad:ResizingPanel.ResizeWidth="150">
+                        <ad:DockableContent x:Name="classesContent" Title="Scripts">
+                            <TreeView ItemsSource="{Binding RootScripts}">
+                                <TreeView.ItemTemplate>
+                                    <HierarchicalDataTemplate ItemsSource="{Binding Scripts}">
+                                        <Grid MouseUp="ScriptItem_Click">
+                                            <TextBox Text="{Binding ScriptName}" Visibility="{Binding RenameMode, Converter={StaticResource BoolToVisibility}}" />
+                                            <TextBlock Text="{Binding ScriptName}" Visibility="{Binding RenameMode, Converter={StaticResource InvertBoolToVisibility}}"/>
+                                        </Grid>
+                                    </HierarchicalDataTemplate>
+                                </TreeView.ItemTemplate>
+                            </TreeView>
+                        </ad:DockableContent>
+                    </ad:DockablePane>
+                    <ad:DocumentPane>
+                        <!--<ad:DocumentContent Title="Web Products"/>-->
+                    </ad:DocumentPane>
+                    <ad:DockablePane ad:ResizingPanel.ResizeWidth="150">
+                        <ad:DockableContent x:Name="toolsContent" Title="Tools">
+                            <TreeView DockPanel.Dock="Right" Background="WhiteSmoke">
+                                <TreeViewItem Header="Input" IsExpanded="True">
+                                    <TreeViewItem Header="Local File System" />
+                                    <TreeViewItem Header="Ftp Location" />
+                                    <TreeViewItem Header="Database" />
+                                </TreeViewItem>
+                                <TreeViewItem Header="Converters" IsExpanded="True">
+                                    <TreeViewItem Header="Xml To Csv" />
+                                    <TreeViewItem Header="Csv To Xml" />
+                                </TreeViewItem>
+                                <TreeViewItem Header="Scripts" IsExpanded="True">
+                                    <TreeViewItem Header="C# Script" />
+                                    <TreeViewItem Header="XSLT Script" />
+                                </TreeViewItem>
+                                <TreeViewItem Header="Output" IsExpanded="True">
+                                    <TreeViewItem Header="Local File System" />
+                                    <TreeViewItem Header="Ftp Location" />
+                                    <TreeViewItem Header="Database" />
+                                </TreeViewItem>
+                            </TreeView>
+                        </ad:DockableContent>
+                    </ad:DockablePane>
+                </ad:ResizingPanel>
+                <ad:DockablePane ad:ResizingPanel.ResizeHeight="100">
+                    <ad:DockableContent Title="Output">
+                        <ListView>
+                        </ListView>
+                    </ad:DockableContent>
+                </ad:DockablePane>
+            </ad:ResizingPanel>
+        </ad:DockingManager>
+
+        <StatusBar Grid.Row="2">
+            <StatusBarItem Content="Ready"/>
+        </StatusBar>
+    </Grid>
+        <!--<TabControl x:Name="DesignerTagControl" TabStripPlacement="Bottom" IsSynchronizedWithCurrentItem="True"
                     DataContext="{Binding Current}" SelectedIndex="{Binding DesignMode}">
             <TabItem Header="Design" Content="{Binding ScriptDesigner}">
             </TabItem>
             <TabItem Header="Source">
                 <controls:Editor x:Name="editor" Syntax="xml" Text="{Binding ScriptText, Mode=TwoWay}" />
             </TabItem>
-        </TabControl>
-    </DockPanel>
+        </TabControl>-->
 </Window>
